<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rotten Tomatoes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear">Clear All Favorites</string>
    <string name="exit">Exit</string>
    <string name="title_activity_movies">Movies Activity</string>
    <string name="movieThumbnail">Movie Thumbnail</string>
    <string name="title">Movie Title</string>
    <string name="year">Year</string>
    <string name="mpaa_rating">MPAA Rating</string>
    <string name="criticsImage">Critics Rating</string>
    <string name="audienceImage">Audience Rating</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="date">Date</string>
    <string name="rating">rating</string>
    <string name="length">length</string>
    <string name="genre">genre</string>
    <string name="audience">Audience</string>
    <string name="critics">Critics</string>
    <string name="aimage">Aimage</string>
    <string name="cimage">Cimage</string>
    <string name="apercent">A%</string>
    <string name="cpercent">C%</string>
    <string name="back">Back</string>
    <string name="browser">Browser</string>
    <string name="notFavourite">Not Favourite</string>
    <string name="favourite">Favourite</string>

</resources>
