<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieActivity" >

    <TextView
        android:id="@+id/titleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleDetail"
        android:layout_below="@+id/titleDetail"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/movieThumbnail"
        android:src="@drawable/poster_not_found" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageDetail"
        android:layout_marginRight="23dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/imageDetail"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textDate"
        android:layout_alignBottom="@+id/textDate"
        android:layout_centerHorizontal="true"
        android:text="@string/rating" />

    <TextView
        android:id="@+id/textRuntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textRating"
        android:layout_alignBottom="@+id/textRating"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/titleDetail"
        android:text="@string/length" />

    <TextView
        android:id="@+id/textGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textRating"
        android:layout_below="@+id/textRating"
        android:layout_marginTop="14dp"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textDate"
        android:layout_below="@+id/textGenre"
        android:layout_marginTop="14dp"
        android:text="@string/audience"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textAPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="14dp"
        android:text="@string/apercent"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageAudience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_toRightOf="@+id/textAPercent"
        android:contentDescription="@string/aimage"
        android:src="@drawable/ic_launcher1" />

    <TextView
        android:id="@+id/textCPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textAPercent"
        android:layout_alignBottom="@+id/textAPercent"
        android:layout_alignLeft="@+id/textView7"
        android:text="@string/cpercent"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/imageDetail"
        android:text="@string/critics"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageCritics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textRuntime"
        android:layout_alignTop="@+id/imageAudience"
        android:contentDescription="@string/cimage"
        android:src="@drawable/ic_launcher1" />

    <ImageView
        android:id="@+id/imageBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageBack"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/browser"
        android:src="@drawable/browser" />

    <ImageView
        android:id="@+id/imageFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageBrowser"
        android:layout_toRightOf="@+id/textView7"
        android:contentDescription="@string/favourite"
        android:src="@drawable/favourite_no" />

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textAPercent"
        android:layout_below="@+id/imageAudience"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back" />

</RelativeLayout>
